[package]
name = "gtk-ui-builder"
version = "0.1.0"
description = " A Rust library to parse Blueprint files and convert them into GTK UI files"
keywords = ["gtk", "gui"]
authors = ["Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/krypt0nn/gtk-ui-builder"
edition = "2021"
